Update prepare script in package.json to initialize Husky

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "scripts": {
     "test": "node src/index.js",
-    "prepare": "husky",
+    "prepare": "husky init",
     "lint": "eslint -c eslint.config.mjs --fix"
   },
   "keywords": [
