--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "A protocol buffer query string documentor",
   "type": "module",
-  "bin": {
-    "protobuf-doc": "src/index.js"
-  },
+  "bin": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/YasogaN/protobuf-doc.git"
@@ -40,6 +38,7 @@
   ],
   "devDependencies": {
     "@eslint/compat": "^1.2.7",
+    "@eslint/js": "^9.23.0",
     "@types/node": "^22.13.13",
     "eslint": "^9.23.0",
     "eslint-plugin-import": "^2.31.0",
@@ -49,8 +48,5 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0"
   },
-  "packageManager": "yarn@4.7.0+sha512.5a0afa1d4c1d844b3447ee3319633797bcd6385d9a44be07993ae52ff4facabccafb4af5dcd1c2f9a94ac113e5e9ff56f6130431905884414229e284e37bb7c9",
-  "dependencies": {
-    "@eslint/js": "^9.23.0"
-  }
+  "packageManager": "yarn@4.7.0+sha512.5a0afa1d4c1d844b3447ee3319633797bcd6385d9a44be07993ae52ff4facabccafb4af5dcd1c2f9a94ac113e5e9ff56f6130431905884414229e284e37bb7c9"
 }
